css/Overlay.css
/* Style for overlay */
#overlay {
    position: fixed; /* Sit on top of the page content */
    display: none; /* Hidden by default */
    width: 100%; /* Full width (cover the whole page) */
    height: 100%; /* Full height (cover the whole page) */
    top: 0; 
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(0,0,0,0.3); /* Black background with opacity */
    z-index: 1; /* Specify a stack order in case you're using a different order for other elements */
    cursor: pointer; /* Add a pointer on hover */
}

.overlay_inner {
    position: absolute;
    top: 15%;
    left: 50%;
	max-width: 55%;
    font-size: 25px;
/*    text-shadow: 2px 2px 4px #000000;*/
    color: black;
    background-color: white;
    display: inline;
    padding: 0.5rem;
    transform: translate(-50%,0%);
    -ms-transform: translate(-50%,0%);
}

